# esports

./: .gitignore  pyproject.toml
esports/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py
users/: models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_role.py  0003_remove_user_nickname.py
