[project]
name = "requirements"
version = "0.1.0"
description = ""
authors = [
    {name = "abrigo132",email = "garipotter97@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg (>=3.2.3,<4.0.0)",
    "django (>=5.1.4,<6.0.0)",
    "psycopg-binary (>=3.2.3,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-allauth (>=65.3.1,<66.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "python3-openid (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
